cmake_minimum_required(VERSION 3.24)
project(cs_110_term_project)

set(CMAKE_CXX_STANDARD 17)

add_executable(cs_110_term_project main.cpp Library.cpp Menu.cpp Menu.h util.h)
#add_executable(cs_110_term_project main.cpp Book.h ChildrenBook.h ComputerBook.h Library.cpp Library.h Novel.h Person.h
#        Student.h Teacher.h)
